<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvHeadlines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_marginTop="@dimen/_5sdp"
                tools:itemCount="1"
                tools:listitem="@layout/item_headlines" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/menuChip"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rvHeadlines"
                android:layout_marginHorizontal="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_15sdp"
                app:checkedChip="@+id/chipHeadlines"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipHeadlines"
                    style="@style/Widget.MaterialComponents.Chip.Choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="@string/chip_headlines"
                    android:textSize="@dimen/_12ssp"
                    app:textEndPadding="@dimen/_10sdp"
                    app:textStartPadding="@dimen/_10sdp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipDetik"
                    style="@style/Widget.MaterialComponents.Chip.Choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="@string/chip_detik"
                    android:textSize="@dimen/_12ssp"
                    app:textEndPadding="@dimen/_10sdp"
                    app:textStartPadding="@dimen/_10sdp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipKompas"
                    style="@style/Widget.MaterialComponents.Chip.Choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="@string/chip_viva"
                    android:textSize="@dimen/_12ssp"
                    app:textEndPadding="@dimen/_10sdp"
                    app:textStartPadding="@dimen/_10sdp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCNN"
                    style="@style/Widget.MaterialComponents.Chip.Choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="@string/chip_cnn"
                    android:textSize="@dimen/_12ssp"
                    app:textEndPadding="@dimen/_10sdp"
                    app:textStartPadding="@dimen/_10sdp"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipCNBC"
                    style="@style/Widget.MaterialComponents.Chip.Choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="@string/chip_cnbc"
                    android:textSize="@dimen/_12ssp"
                    app:textEndPadding="@dimen/_10sdp"
                    app:textStartPadding="@dimen/_10sdp" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipTempo"
                    style="@style/Widget.MaterialComponents.Chip.Choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="@string/chip_tempo"
                    android:textSize="@dimen/_12ssp"
                    app:textEndPadding="@dimen/_10sdp"
                    app:textStartPadding="@dimen/_10sdp"/>

                <com.google.android.material.chip.Chip
                    android:id="@+id/chipRepublika"
                    style="@style/Widget.MaterialComponents.Chip.Choose"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="@string/chip_republika"
                    android:textSize="@dimen/_12ssp"
                    app:textEndPadding="@dimen/_10sdp"
                    app:textStartPadding="@dimen/_10sdp"/>
            </com.google.android.material.chip.ChipGroup>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvNews"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/menuChip"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginHorizontal="@dimen/_10sdp"
                tools:listitem="@layout/item_news"
                android:visibility="visible"/>

            <TextView
                android:id="@+id/tvNotice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="Maaf, tidak ada berita terbaru dari kompas"
                android:layout_below="@+id/menuChip"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_50sdp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/_12ssp"
                android:textColor="@color/today_news_grey"
                android:visibility="gone"/>

        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_40sdp"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="@color/today_news_orange"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>